# spack-exercise

./: CMakeLists.txt  README.md  main.cpp
docker/: package.py
mandatory-exercise/: package.py
optional-exercise/: package.py
